# usb-sd-creator

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  creator.cpp  creator.h  creator.pro  creator.ui  deviceenumerator.h  deviceenumerator_udisks2.cpp  deviceenumerator_udisks2.h  deviceenumerator_unix.cpp  deviceenumerator_unix.h  deviceenumerator_windows.cpp  deviceenumerator_windows.h  diskwriter.cpp  diskwriter.h  diskwriter_udisks2.cpp  diskwriter_udisks2.h  diskwriter_unix.cpp  diskwriter_unix.h  diskwriter_windows.cpp  diskwriter_windows.h  downloadmanager.cpp  downloadmanager.h  jsonparser.cpp  jsonparser.h  linux_build.sh  linux_clean.sh  main.cpp  movingaverage.cpp  movingaverage.h  osx_build.sh  osx_clean.sh  osx_make_dmg.sh  prepare_variables.bat  privileges.h  privileges_unix.cpp  privileges_unix.h  resources.qrc  (+18 more)
.github/workflows/: build.yaml
ci/linux/: setup.sh
ci/macos/: setup.sh
dmg_osx/: DS_Store_Setup.scpt.in  Info.plist.in  codesign.sh  main.scpt.txt  notarize.cmake  notarize.sh
dmg_osx/template.app/Contents/: Info.plist
dmg_osx/template.app/Contents/MacOS/: askPass.js
dmg_osx/template.app/Contents/Resources/: applet.icns
dmg_osx/template.app/Contents/Resources/Scripts/: main.scpt
lang/: lang-ar_SA.ts  lang-ast_ES.po  lang-ast_ES.ts  lang-bg_BG.po  lang-bg_BG.ts  lang-cs_CZ.po  lang-cs_CZ.ts  lang-da_DK.po  lang-da_DK.ts  lang-de_DE.po  lang-de_DE.ts  lang-el_GR.po  lang-el_GR.ts  lang-en_GB.po  lang-en_GB.ts  lang-es.ts  lang-es_ES.po  lang-es_ES.ts  lang-fa_IR.po  lang-fa_IR.ts  lang-fi_FI.po  lang-fi_FI.ts  lang-fr_FR.po  lang-fr_FR.ts  lang-he_IL.po  lang-he_IL.ts  lang-hr_HR.po  lang-hr_HR.ts  lang-hu_HU.po  lang-hu_HU.ts  lang-it.ts  lang-it_IT.po  lang-it_IT.ts  lang-ko_KR.po  lang-ko_KR.ts  lang-lt_LT.po  lang-lt_LT.ts  lang-nb_NO.po  lang-nb_NO.ts  lang-nl_NL.po  (+28 more)
macos/: askpass.cpp  askpass.h  notarize.sh
qss/: stylesheet_osx.qss
windows/: winapp.rc  winapp.rc.in  windows.manifest
windows/msvc2019-arm64/zlib/lib/: zlibstatic.lib  zlibstaticd.lib
windows/msvc2019-x64/zlib/lib/: zlibstatic.lib  zlibstaticd.lib
windows/msvc2022-arm64/zlib/lib/: zlibstatic.lib  zlibstaticd.lib
windows/msvc2022-x64/zlib/lib/: zlibstaticd.lib
windows/msvc2022/zlib/lib/: zlibstatic.lib
